--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "accepts": "^1.3.8",
     "acorn": "^7.4.1",
     "acorn-node": "^1.8.2",
@@ -186,6 +187,7 @@
     "find-cache-dir": "^3.3.2",
     "find-up": "^4.1.0",
     "follow-redirects": "^1.15.2",
+    "fontawesome-free": "^1.0.4",
     "form-data": "^4.0.0",
     "forwarded": "^0.2.0",
     "fraction.js": "^4.2.0",
